--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
+<!DOCTYPE html>
 <html>
-  <hea
-  <title>Douglas Machado Silva</title>
-
-  
+<head>
+    <title>Douglas Machado Silva</title>
+</head>
+<body>
+    <h1>Douglas Machado Silva</h1>
+    <p>Email: <a href="mailto:douglas@douglasmachado.com">your-email@example.com</a></p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/douglasmachadosilva">Douglas Machado Silva</a></p>
+</body>
 </html>
