--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <h1>Douglas Machado Silva</h1>
-    <p>Email: <a href="mailto:douglas@douglasmachado.com">your-email@example.com</a></p>
-    <p>LinkedIn: <a href="https://www.linkedin.com/in/douglasmachadosilva">Douglas Machado Silva</a></p>
+    <p>Email: <a href="mailto:douglas@douglasmachado.com">douglas@douglasmachado.com</a></p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/douglasmachadosilva">https://www.linkedin.com/in/douglasmachadosilva</a></p>
 </body>
 </html>
