--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
             text-align: center;
             color: #0056b3;
         }
+        h2 {
+            text-align: center;
+            color: #333;
+            font-size: 1.2em;
+        }
         p {
             line-height: 1.6;
         }
@@ -41,6 +46,7 @@
 <body>
     <div class="container">
         <h1>Douglas Machado Silva</h1>
+        <h2>Software Design | Software Testing | Requirements Engineering | Cloud Computing | Artificial Intelligence | Higher Education | Leadership | People Management</h2>
         <div class="contact-info">
             <p>Email: <a href="mailto:douglas@douglasmachado.com">douglas@douglasmachado.com</a></p>
             <p>LinkedIn: <a href="https://www.linkedin.com/in/douglasmachadosilva">https://www.linkedin.com/in/douglasmachadosilva</a></p>
