--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
             text-align: center;
             color: #333;
             font-size: 1.2em;
+            background-color: #e0e0e0;
+            padding: 10px;
+            border-radius: 5px;
         }
         p {
             line-height: 1.6;
