--- a/index.html
+++ b/index.html
@@ -24,11 +24,10 @@
         }
         h2 {
             text-align: center;
-            color: #333;
-            font-size: 1.2em;
-            background-color: #e0e0e0;
-            padding: 10px;
-            border-radius: 5px;
+            color: #666;
+            font-size: 1em;
+            margin-top: -10px;
+            font-weight: normal;
         }
         p {
             line-height: 1.6;
